[tool.poetry]
name = "harmony"
version = "0.1.0"
description = ""
authors = ["DavidMChan <davidchan@berkeley.edu>"]
readme = "README.md"
include = ["README.md", "LICENSE", "harmony/assets/*.txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.dependencies]
python = "~3.8"
nltk = "^3.6.5"
numpy = "^1.21.4"
matplotlib = "^3.5.0"
tqdm = "^4.62.3"
spacy = "^3.2.0"
textdistance = "^4.2.2"
fuzzywuzzy = "^0.18.0"
absl-py = "^1.0.0"
python-Levenshtein = "^0.12.2"
rich = "^10.14.0"
msgpack = "^1.0.2"
mpire = "^2.3.1"
click = "^8.0.3"
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.2.0/en_core_web_lg-3.2.0-py3-none-any.whl"}
fuzzysearch = "^0.7.3"
sentence-transformers = "^2.1.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^7.29.0"
isort = "^5.10.1"
black = "^21.11-beta.1"
flake8 = "^4.0.1"
mypy = "^0.910"

[tool.poetry.scripts]
harmony-cli = 'harmony.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
