[metadata]
name = vdtk
version = attr: vdtk.__version__
description = Visual Description Toolkit
authors =
    DavidMChan <davidchan@berkeley.edu>
readme = README.md
homepage = https://github.com/CannyLab/vdtk
repository = https://github.com/CannyLab/vdtk
long_description = file: README.md, CHANGELOG.md, LICENSE.md
classifiers =
    Development Status :: 4 - Beta,
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Programming Language :: Python :: 3.11,
    Topic :: Scientific/Engineering :: Artificial Intelligence,
    Topic :: Scientific/Engineering :: Information Analysis,

[options]
include_package_data = True
packages = find:
install_requires =
    nltk >= 3.6.5
    numpy >= 1.21.4
    matplotlib >= 3.5.0
    tqdm >= 4.62.3
    spacy >= 3.2.0
    textdistance >= 4.2.2
    fuzzywuzzy >= 0.18.0
    absl-py >= 1.0.0
    python-Levenshtein >= 0.12.2
    rich >= 10.14.0
    msgpack >= 1.0.2
    mpire >= 2.3.1
    click >= 8.0.3
    fuzzysearch >= 0.7.3
    sentence-transformers >= 2.1.0
    pycocoevalcap >= 1.2
    bert-score >= 0.3.12
    embeddings >= 0.0.8
    POT >= 0.8
    rouge-score >= 0.1.2
    bleurt @ git+https://github.com/google-research/bleurt.git
    clip @ git+https://github.com/openai/CLIP.git
    mauve-text @ git+https://github.com/krishnap25/mauve.git
    en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.4.1/en_core_web_lg-3.4.1-py3-none-any.whl


[options.entry_points]
console_scripts =
    vdtk = vdtk.cli:cli

[options.packages.find]
exclude =
    vdtk-test

[options.package_data]
* = *.txt, *.rst, *.md, *.yaml, *.yml, *.json, *.html, *.css, *.js, *.png, *.jpg, *.jpeg, *.gif, *.ico, *.eot, *.woff, *.woff2, *.ttf, *.svg, *.otf
